# News-Sentiment-Analyzer

./: README.md  analyzer_app.py  main copy.py  main.py  malay_sa_test.py  preprocessing.py  pyproject.toml  requirements.txt  sentiment_analysis.py
.github/workflows/: main.yml
analyzer_app/output/: results.csv
analyzer_app/uploads/: dataset_results.csv
analyzer_backend_test/: main.py  preprocessing.py  sentiment_analysis.py
data/: dataset-100.csv  dataset_1-extended - Copy_edited - Copy.xlsx  dataset_1-extended - Copy_edited.xlsx  dataset_1-extended-70-articles2.csv  dataset_1-extended-english-csv.csv  dataset_1-extended-english.xlsx  dataset_1-extended.csv  dataset_1.csv  english_dataset.csv
output/: cleaned_analysed-dataset_results.csv  dataset_results - Copy.csv  dataset_results.csv  english_predicted.csv  malay_predicted.csv  results.csv
plot_results/: plot_results.py  word_cloud.py
static/: script.js  styles.css
templates/: about.html  contact.html  index.html
unused/uploads/: results.csv
uploads/: bm_dataset.csv  dataset_1-extended-70-articles.csv  english_dataset.csv  english_results.csv  results.csv
