[project]
name = "sentimentanalysissabah"
version = "0.1.0"
description = ""
authors = [
    {name = "Erin"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lingua-language-detector (>=2.1.0,<3.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
